# SmartRTU

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.txt  TODO.txt  Timer.cpp  desktop.cpp  errors.txt  infoboard  output.txt  test.cpp  timetable.h
Guides/: Project_structure.txt  README.md
Guides/widgetBackUp/: infoboard
InfoBoard/: CMakeLists.txt
closet/: CFantik.cpp  CFantik.h  README.md  WgAds.cpp  WgAds.h
doc/: Doxyfile
doc/html/: index.html  navtreedata.js
lib/: CMakeLists.txt  Picture.h
lib/TFont/: CMakeLists.txt
notes/: README.md  note1.txt  note2.txt  note3.txt
res/: adverts.json  config.cfg  timetable.json
res/ads/: text.txt
res/tmp/: temp.html
res/tmp/HtmlAd/: HtmlAd.html  README.txt
src/: TODO.txt  config.h  main.cpp
src/configurator/: CMakeLists.txt  configurator.cpp  configurator.h
src/engine/: CFontStorage.h  CMakeLists.txt  CPicturesStorage.cpp  CPicturesStorage.h  Engine.cpp  Engine.h  Timer.cpp  Timer.h  board.cpp  board.h  desktop.cpp  desktop.h  timetable.cpp  timetable.h
src/lib/: CMakeLists.txt  Dummy.cpp
src/lib/fonts/: CMakeLists.txt  TFont.cpp  TFont.h  ftf.cpp  ftf.h
src/lib/json/: CMakeLists.txt
src/lib/pictures/: CMakeLists.txt  Picture.cpp  Picture.h
src/storage/: CFantik.cpp  CFontStorage.cpp  CFontStorage.h  CMakeLists.txt  CPicturesStorage.cpp  CPicturesStorage.h
src/widgets/: CFantik.cpp  CMakeLists.txt  IWidget.h  WgAds.cpp  WgAds.h  WgBackground.cpp  WgBackground.h  WgCalendar.cpp  WgCalendar.h  WgClock.cpp  WgClock.h  WgForecast.cpp  WgForecast.h  WgHtmlAds.cpp  WgHtmlAds.h  WgSockets.cpp  WgSockets.h  WgTimetable.cpp  WgTimetable.h  WgWatchdog.cpp  WgWatchdog.h  advert_shell.cpp  advert_shell.h
src/widgets/WgHtmlAds/: CMakeLists.txt  WgHtmlAds.cpp  WgHtmlAds.h  advert_shell.cpp  advert_shell.h
widgets/: CMakeLists.txt  WgForecast.h  WgSockets.h  WgTimetable.cpp  WgTimetable.h  WgWatchdog.h
widgets/text/: school.txt  text.hny  text.ing  text.school
